--- a/css.css
+++ b/css.css
@@ -3,7 +3,6 @@ body {
 }
 .header{
     background-color: #bbb;
-    padding: 10px;
 }
 ul {
     list-style-type: none;
@@ -14,6 +13,7 @@ ul {
     position: -webkit-sticky;
     position: sticky;
     top: 0;
+    margin-top: 19%;
 }
 
 li {
@@ -37,8 +37,11 @@ li a:hover {
 }
 
 h1.title {
-    text-align: center;
-    font-size: 56px;
+    margin-top: -30%;
+    font-size: 66px;
+    position: absolute;
+    margin-left: 33%;
+    color: whitesmoke;
 }
 h2 {
     text-align: center;
@@ -49,5 +52,24 @@ h1.about {
 }
 
 h2 {
-    text-align: center;
+    margin-top: -24%;
+    margin-left: -8%;
+    color: papayawhip;
+}
+.headerImage img {
+    width:100%;
+    height:90vh;
+}
+.adaLogo img {
+    height: 35vh;
+    width: 27%;
+    position: absolute;
+    margin-top: -50%;
+}
+.ddLogo img {
+    position: absolute;
+    height: 12vh;
+    margin-left: 78%;
+    margin-top: 4%;
+    padding: 5px;
 }
